lag til metoder for å kunne opprette en forfatter med tilhørende bøker